updated copy on overflow page

--- a/overflow.html
+++ b/overflow.html
@@ -178,12 +178,10 @@
             <p class="pretitle o-50">The Overflow Story</p>
             <h2 class="display-2 px-md-4 my-6 text-blue-dark">
               <span data-aos="fade-in">God</span>
-              <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="150">always</span>
-              <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="300" class="text-blue">overflows</span>
-              <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="450" class="text-blue">in</span>
-              <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="600" class="text-blue">generosity</span>
-              <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="750">towards</span>
-              <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="900">us.</span>
+              <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="150" class="text-blue">always</span>
+              <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="300" class="text-blue">provides</span>
+              <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="450">for</span>
+              <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="600">us.</span>
             </h2>
           </div>
           <div class="text-constrained mx-auto text-center">
@@ -197,7 +195,32 @@
             <div class="timeline--item d-grid grid-cols-1 grid-cols-md-2 align-items-center">
               <div class="py-6 py-md-6 pl-5 pl-sm-6 pl-md-0 pr-md-6 pr-lg-7 text-md-right">
                 <div data-aos="fade-up">
-                  <h3 class="h5 mb-1 text-blue"><span class="display-3 text-blue-dark">2017-2019</span><br />Lorem Ipsum</h3>
+                  <h3 class="h5 mb-1 text-blue"><span class="display-3 text-blue-dark">2017</span><br />Our Cities, Our State, Our World.</h3>
+                  <p class="mb-0">
+                    We raised over $1.15M to help families in our cities, our state, and our world. Because of generous givers, we were able to donate to
+                    organizations that helped provide care and support for pregnant women, community and support to foster families, and support and medical
+                    care to fight the AIDS epidemic in Africa.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="timeline--item d-grid grid-cols-1 grid-cols-md-2 align-items-center">
+              <div class="py-6 py-md-6 pl-5 pl-sm-6 pl-md-6 pl-lg-7 col-start-md-2">
+                <div data-aos="fade-up">
+                  <h3 class="h5 mb-1 text-blue"><span class="display-3 text-blue-dark">2018</span><br />Kingdom Mentality</h3>
+                  <p class="mb-0">
+                    One way we put God first is by giving to what matters to Him. And, boy, did this church do that! In 2018, over $1.7M was given to help
+                    neighboring churches do more ministry, complete renovations at NewSpring Greenville (formerly NewSpring Eastlan), and support church
+                    planting and aid organizations taking the Gospel around the world.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="timeline--item d-grid grid-cols-1 grid-cols-md-2 align-items-center">
+              <div class="py-6 py-md-6 pl-5 pl-sm-6 pl-md-0 pr-md-6 pr-lg-7 text-md-right">
+                <div data-aos="fade-up">
+                  <h3 class="h5 mb-1 text-blue"><span class="display-3 text-blue-dark">2019</span><br />Lorem Ipsum</h3>
                   <p class="mb-0">
                     Est nostrud dolor minim nulla ea occaecat sunt deserunt eu consectetur sunt. Incididunt dolor voluptate ut exercitation et Lorem sit.
                     Eiusmod ex reprehenderit commodo adipisicing incididunt esse occaecat.
@@ -270,16 +293,20 @@
             <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="300">Aiken</span>
             <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="400">to</span>
             <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="500">point</span>
-            <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="600">to</span>
-            <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="700">Jesus</span>
-            <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="800">&mdash; literally.</span>
+            <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="600">people</span>
+            <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="700">to</span>
+            <span data-aos="fade-in" data-aos-duration="1000" data-aos-delay="800">Jesus.</span>
           </h2>
           <p>
             Our hope is that our buildings would be spaces where the local communities surrounding them can gather to worship, grow, and connect with each
             other. That’s why
             <a href="/2030.html">we want every NewSpring campus to exist in a permanent home by 2030.</a>
+            <!-- HIDDEN UNTIL WE GET THE VIDEO -->
+            <span class="hidden">Check out the video below to learn more about these buildings’ intentional design.</span>
           </p>
+          <pre>[[ 3D Video Embed / Still Render ]]</pre>
         </div>
+
         <div class="hidden position-relative ratio-video bg-blue my-6 my-md-8">
           <div
             class="position-absolute top-0 right-0 label label-danger h6 tracking-tight mt-3 mr-3 mt-md-5 mr-md-5 px-2 py-1 bring-forward"
@@ -303,7 +330,7 @@
         </div>
 
         <!-- NEWS SWIPER -->
-        <div class="text-center mt-6 mt-md-7">
+        <div class="hidden text-center mt-6 mt-md-7">
           <!-- Slider main container -->
           <div id="campus-facilities-swiper" class="swiper-container my-5 mt-md-6 text-left" data-aos="fade-up">
             <!-- Additional required wrapper -->
@@ -392,12 +419,15 @@
                 class="position-relative ratio-square rounded-2x rounded-l-0 background-cover background-center"
                 style="background-image: url('/Themes/new/Assets/Images/overflow_stories_cody.gif'); box-shadow: 20px 20px 0px var(--overflow-blue)"></div>
             </div>
-            <div class="col-span-12 col-span-md-7 col-span-lg-6 col-span-xl-5 d-flex align-items-center" data-aos="fade-left">
+            <div class="col-span-12 col-span-md-7 col-span-lg-6 col-span-xl-6 d-flex align-items-center" data-aos="fade-left">
               <div class="p-4 p-md-6 py-md-0">
-                <h3 class="text-white">“Incididunt enim dolore mollit minim commodo id ullamco proident.</h3>
+                <h3 class="text-white">
+                  “Being part of the Aiken Campus taught me that doing life and ministry closely with people – who ultimately become family — is everything.”
+                </h3>
                 <p>
-                  Eu eu dolor cillum tempor id minim aliqua. Sit velit eu ad ipsum esse velit proident id culpa culpa id. Ex deserunt laborum voluptate est ea
-                  nulla sunt esse sit magna occaecat culpa ea minim. Quis nulla dolore do irure ea exercitation culpa.”
+                  Cody graduated from Fuse in Aiken and now serves on NewSpring staff in Anderson, SC! He still has close ties to so many people in Aiken; many
+                  of whom are his closest friends. They challenge him where needed and speak life into him, as well. His friends encourage him to be the best
+                  Christ-follower he can be!
                 </p>
                 <p class="mb-0 text-blue-dark">
                   <span class="h4 italic font-serif font-bold text-blue tracking-tight">Cody Boynton</span><br />Former Aiken Fuse Student
@@ -415,15 +445,18 @@
                   box-shadow: 20px 20px 0px var(--overflow-blue);
                 "></div>
             </div>
-            <div class="col-span-12 col-span-md-7 col-span-lg-6 col-span-xl-5 d-flex align-items-center ltr" data-aos="fade-right">
+            <div class="col-span-12 col-span-md-7 col-span-lg-6 col-span-xl-6 d-flex align-items-center ltr" data-aos="fade-right">
               <div class="p-4 p-md-6 py-md-0">
-                <h3 class="text-white">“Nostrud sunt aliquip est occaecat ullamco eiusmod anim ea exercitation.</h3>
+                <h3 class="text-white">
+                  “On our first Sunday, we turned to our daughter and said, ‘We don’t know how you feel — but this is our church forever!’”
+                </h3>
                 <p>
-                  Incididunt dolor ullamco nulla minim laborum ea deserunt cupidatat sit cupidatat do commodo excepteur esse. Enim qui ex laborum commodo
-                  pariatur laboris Lorem qui ut.”
+                  Roy and Laura have been a part of NewSpring for many years. In 2021, Roy went through a major health event and was in and out of the hospital
+                  for a long time. Through all of the ups and downs, Roy and Laura felt so supported by the church. Their home group took care of them and met
+                  every need they had; all they had to do was ask. Since then, Roy made a truly miraculous recovery!
                 </p>
                 <p class="mb-0 text-blue-dark">
-                  <span class="h4 italic font-serif font-bold text-blue tracking-tight">Laura and Roy Beck</span><br />Aiken Volunteers
+                  <span class="h4 italic font-serif font-bold text-blue tracking-tight">Roy and Laura Beck</span><br />Aiken Volunteers
                 </p>
               </div>
             </div>
@@ -438,12 +471,13 @@
                   box-shadow: 20px 20px 0px var(--overflow-blue);
                 "></div>
             </div>
-            <div class="col-span-12 col-span-md-7 col-span-lg-6 col-span-xl-5 d-flex align-items-center" data-aos="fade-left">
+            <div class="col-span-12 col-span-md-7 col-span-lg-6 col-span-xl-6 d-flex align-items-center" data-aos="fade-left">
               <div class="p-4 p-md-6 py-md-0">
-                <h3 class="text-white">“Non dolore voluptate adipisicing culpa minim deserunt voluptate dolore.</h3>
+                <h3 class="text-white">“NewSpring has become like another home for me!”</h3>
                 <p>
-                  Culpa qui consequat ut esse eu. Reprehenderit tempor ipsum nostrud dolore sit esse reprehenderit labore. Exercitation sunt occaecat est
-                  veniam. Culpa ea deserunt nisi aliquip. Ullamco commodo in laboris eiusmod proident.”
+                  Janiya is a ninth-grader who started coming to Fuse Student Ministry last year. She fell in love with it and keeps bringing tons of her
+                  friends back to Fuse on Wednesday nights! Janiya has an amazing heart for others and just began to serve in KidSpring on Sundays! Her joy is
+                  infectious, and now, her family attends church with her, too.
                 </p>
                 <p class="mb-0 text-blue-dark">
                   <span class="h4 italic font-serif font-bold text-blue tracking-tight">Janiya Jackson</span><br />Aiken Fuse Student
@@ -522,44 +556,43 @@
         <div class="page-constrained mx-auto">
           <div class="text-center mb-7">
             <p class="pretitle">Year in Review</p>
-            <h2 class="display-2">Annual Report</h2>
+            <h2 class="display-2">2022 Annual Report</h2>
+            <p class="italic text-kraft">All numbers rounded to the nearest ten thousand.</p>
           </div>
           <div class="d-grid grid-cols-1 grid-cols-md-2 gap-7 mb-7 py-2 pb-md-5">
             <div>
-              <h3 class="h2 font-black text-white mb-5">2022 Income</h3>
+              <h3 class="h2 font-black text-white mb-5">Income</h3>
               <div data-aos="fade-up">
                 <h4 class="h5 text-kraft mb-0">General Tithes &amp; Offerings</h4>
-                <p class="h5 tracking-tighter mb-5">$00.00m <span class="text-gray o-70">00%</span></p>
+                <p class="h5 tracking-tighter mb-5">$41.85m <span class="text-gray o-70">91%</span></p>
               </div>
               <div data-aos="fade-up">
                 <h4 class="h5 text-kraft mb-0">Overflow Fund</h4>
-                <p class="h5 tracking-tighter mb-5">$0.00m <span class="text-gray o-70">0.0%</span></p>
+                <p class="h5 tracking-tighter mb-5">$3.48m <span class="text-gray o-70">7.5%</span></p>
               </div>
               <div data-aos="fade-up">
                 <h4 class="h5 text-kraft mb-0">The Gauntlet Fund</h4>
-                <p class="h5 tracking-tighter mb-5">$0.00m <span class="text-gray o-70">0.0%</span></p>
+                <p class="h5 tracking-tighter mb-5">$0.70m <span class="text-gray o-70">1.5%</span></p>
               </div>
             </div>
             <div>
-              <h3 class="h2 font-black text-white mb-5">2022 Expenses</h3>
+              <h3 class="h2 font-black text-white mb-5">Expenses</h3>
               <div data-aos="fade-up">
-                <h4 class="h5 text-kraft mb-0">Next Generation</h4>
-                <p class="h5 tracking-tighter mb-5">$00.00m <span class="text-gray o-70">00%</span></p>
+                <h4 class="h5 text-kraft mb-0">Debt Balance</h4>
+                <p class="h5 tracking-tighter mb-5">$4.63m <span class="text-gray o-70">11%</span></p>
               </div>
               <div data-aos="fade-up">
-                <h4 class="h5 text-kraft mb-0">Gatherings, Events &amp; Facilities</h4>
-                <p class="h5 tracking-tighter mb-5">$0.00m <span class="text-gray o-70">0.0%</span></p>
+                <h4 class="h5 text-kraft mb-0">Next Generation</h4>
+                <p class="h5 tracking-tighter mb-5">$10.52m <span class="text-gray o-70">25%</span></p>
+              </div>
+              <div data-aos="fade-up">
+                <h4 class="h5 text-kraft mb-0">Human Resources Cost</h4>
+                <p class="h5 tracking-tighter mb-5">$19.35m <span class="text-gray o-70">46%</span></p>
               </div>
               <div data-aos="fade-up">
                 <h4 class="h5 text-kraft mb-0">Discipleship, Outreach, &amp; Missions</h4>
-                <p class="mb-2" style="margin-top: -5px">
-                  <small class="italic">Of this, over $##m was given to local and global mission partners!</small>
-                </p>
-                <p class="h5 tracking-tighter mb-5">$0.00m <span class="text-gray o-70">0.0%</span></p>
-              </div>
-              <div data-aos="fade-up">
-                <h4 class="h5 text-kraft mb-0">Support Operational Expenses</h4>
-                <p class="h5 tracking-tighter mb-5">$0.00m <span class="text-gray o-70">0.0%</span></p>
+                <p class="mb-2 italic">Of this, over $4.48m was given to local and global mission partners!</p>
+                <p class="h5 tracking-tighter mb-5">$7.52m <span class="text-gray o-70">18%</span></p>
               </div>
             </div>
           </div>
