updates to overflow

--- a/overflow.html
+++ b/overflow.html
@@ -554,14 +554,14 @@
 
       <section id="report" class="bg-gray-darker text-white">
         <div class="page-constrained mx-auto">
-          <div class="text-center mb-7">
+          <div class="text-center mb-7 mb-md-8">
             <p class="pretitle">Year in Review</p>
-            <h2 class="display-2">2022 Annual Report</h2>
+            <h2 class="display-2">Annual Report</h2>
             <p class="italic text-kraft">All numbers rounded to the nearest ten thousand.</p>
           </div>
           <div class="d-grid grid-cols-1 grid-cols-md-2 gap-7 mb-7 py-2 pb-md-5">
             <div>
-              <h3 class="h2 font-black text-white mb-5">Income</h3>
+              <h3 class="h2 font-black text-white mb-5">2022 Income</h3>
               <div data-aos="fade-up">
                 <h4 class="h5 text-kraft mb-0">General Tithes &amp; Offerings</h4>
                 <p class="h5 tracking-tighter mb-5">$41.85m <span class="text-gray o-70">91%</span></p>
@@ -576,7 +576,7 @@
               </div>
             </div>
             <div>
-              <h3 class="h2 font-black text-white mb-5">Expenses</h3>
+              <h3 class="h2 font-black text-white mb-5">2022 Expenses</h3>
               <div data-aos="fade-up">
                 <h4 class="h5 text-kraft mb-0">Debt Balance</h4>
                 <p class="h5 tracking-tighter mb-5">$4.63m <span class="text-gray o-70">11%</span></p>
@@ -592,14 +592,17 @@
               <div data-aos="fade-up">
                 <h4 class="h5 text-kraft mb-0">Discipleship, Outreach, &amp; Missions</h4>
                 <p class="mb-2 italic">Of this, over $4.48m was given to local and global mission partners!</p>
-                <p class="h5 tracking-tighter mb-5">$7.52m <span class="text-gray o-70">18%</span></p>
+                <p class="h5 tracking-tighter">$7.52m <span class="text-gray o-70">18%</span></p>
               </div>
             </div>
           </div>
 
-          <p class="text-center">
-            <a href="#give" class="btn btn-primary bg-blue mb-2 mb-sm-0" data-scroll>Give Now</a>
-          </p>
+          <div class="text-center">
+            <p>For further questions, please email us at <a href="#">finance@newspring.cc</a> &mdash; we'd love to help!</p>
+            <p>
+              <a href="#give" class="btn btn-primary bg-blue mb-2 mb-sm-0" data-scroll>Give Now</a>
+            </p>
+          </div>
 
           <div id="accordion" class="hidden d-grid grid-cols-1 gap-3">
             <div data-aos="fade-up">
