updated overflow copy

--- a/overflow.html
+++ b/overflow.html
@@ -195,35 +195,10 @@
             <div class="timeline--item d-grid grid-cols-1 grid-cols-md-2 align-items-center">
               <div class="py-6 py-md-6 pl-5 pl-sm-6 pl-md-0 pr-md-6 pr-lg-7 text-md-right">
                 <div data-aos="fade-up">
-                  <h3 class="h5 mb-1 text-blue"><span class="display-3 text-blue-dark">2017</span><br />Our Cities, Our State, Our World.</h3>
+                  <h3 class="h5 mb-1 text-blue"><span class="display-3 text-blue-dark">2017-2019</span><br />Our City, Our State, and Our World</h3>
                   <p class="mb-0">
-                    We raised over $1.15M to help families in our cities, our state, and our world. Because of generous givers, we were able to donate to
-                    organizations that helped provide care and support for pregnant women, community and support to foster families, and support and medical
-                    care to fight the AIDS epidemic in Africa.
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <div class="timeline--item d-grid grid-cols-1 grid-cols-md-2 align-items-center">
-              <div class="py-6 py-md-6 pl-5 pl-sm-6 pl-md-6 pl-lg-7 col-start-md-2">
-                <div data-aos="fade-up">
-                  <h3 class="h5 mb-1 text-blue"><span class="display-3 text-blue-dark">2018</span><br />Kingdom Mentality</h3>
-                  <p class="mb-0">
-                    One way we put God first is by giving to what matters to Him. And, boy, did this church do that! In 2018, over $1.7M was given to help
-                    neighboring churches do more ministry, complete renovations at NewSpring Greenville (formerly NewSpring Eastlan), and support church
-                    planting and aid organizations taking the Gospel around the world.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="timeline--item d-grid grid-cols-1 grid-cols-md-2 align-items-center">
-              <div class="py-6 py-md-6 pl-5 pl-sm-6 pl-md-0 pr-md-6 pr-lg-7 text-md-right">
-                <div data-aos="fade-up">
-                  <h3 class="h5 mb-1 text-blue"><span class="display-3 text-blue-dark">2019</span><br />Lorem Ipsum</h3>
-                  <p class="mb-0">
-                    Est nostrud dolor minim nulla ea occaecat sunt deserunt eu consectetur sunt. Incididunt dolor voluptate ut exercitation et Lorem sit.
-                    Eiusmod ex reprehenderit commodo adipisicing incididunt esse occaecat.
+                    We were able to give $5.3M to local and global churches and mission partners. Not only that, but we were able to invest in NewSpring
+                    campuses across the state and establish NewSpring Greenville (formerly NewSpring Eastlan) in their permanent home!
                   </p>
                 </div>
               </div>
@@ -422,12 +397,12 @@
             <div class="col-span-12 col-span-md-7 col-span-lg-6 col-span-xl-6 d-flex align-items-center" data-aos="fade-left">
               <div class="p-4 p-md-6 py-md-0">
                 <h3 class="text-white">
-                  “Being part of the Aiken Campus taught me that doing life and ministry closely with people – who ultimately become family — is everything.”
+                  “Being part of the Aiken Campus taught me that doing life and ministry closely with people &mdash; who ultimately become family &mdash; is
+                  everything.”
                 </h3>
                 <p>
-                  Cody graduated from Fuse in Aiken and now serves on NewSpring staff in Anderson, SC! He still has close ties to so many people in Aiken; many
-                  of whom are his closest friends. They challenge him where needed and speak life into him, as well. His friends encourage him to be the best
-                  Christ-follower he can be!
+                  After graduating from Fuse in Aiken, Cody moved to Anderson, SC, to attend Anderson University and immersed himself in the youth and young
+                  adult community in the upstate. Cody now serves Fuse campuses all across the state as a member of our Fuse Support Team!
                 </p>
                 <p class="mb-0 text-blue-dark">
                   <span class="h4 italic font-serif font-bold text-blue tracking-tight">Cody Boynton</span><br />Former Aiken Fuse Student
@@ -441,14 +416,14 @@
               <div
                 class="ratio-square rounded-2x rounded-r-0 background-cover background-center"
                 style="
-                  background-image: url('https://media.giphy.com/media/xTiTncVep2khPGhK1i/giphy.gif');
+                  background-image: url('https://s3.amazonaws.com/ns.images/newspring/overflowoffering/2023/overflow_stories_becks.gif');
                   box-shadow: 20px 20px 0px var(--overflow-blue);
                 "></div>
             </div>
             <div class="col-span-12 col-span-md-7 col-span-lg-6 col-span-xl-6 d-flex align-items-center ltr" data-aos="fade-right">
               <div class="p-4 p-md-6 py-md-0">
                 <h3 class="text-white">
-                  “On our first Sunday, we turned to our daughter and said, ‘We don’t know how you feel — but this is our church forever!’”
+                  “On our first Sunday, we turned to our daughter and said, ‘We don’t know how you feel &mdash; but this is our church forever!’”
                 </h3>
                 <p>
                   Roy and Laura have been a part of NewSpring for many years. In 2021, Roy went through a major health event and was in and out of the hospital
@@ -467,7 +442,7 @@
               <div
                 class="ratio-square rounded-2x rounded-l-0 background-cover background-center"
                 style="
-                  background-image: url('https://media.giphy.com/media/eBQqrM0MCGJhu/giphy-downsized-large.gif');
+                  background-image: url('https://s3.amazonaws.com/ns.images/newspring/overflowoffering/2023/overflow_stories_janiya_long.gif');
                   box-shadow: 20px 20px 0px var(--overflow-blue);
                 "></div>
             </div>
@@ -578,27 +553,31 @@
             <div>
               <h3 class="h2 font-black text-white mb-5">2022 Expenses</h3>
               <div data-aos="fade-up">
-                <h4 class="h5 text-kraft mb-0">Debt Balance</h4>
-                <p class="h5 tracking-tighter mb-5">$4.63m <span class="text-gray o-70">11%</span></p>
-              </div>
-              <div data-aos="fade-up">
                 <h4 class="h5 text-kraft mb-0">Next Generation</h4>
-                <p class="h5 tracking-tighter mb-5">$10.52m <span class="text-gray o-70">25%</span></p>
+                <p class="h5 tracking-tighter mb-5">$10.52m <span class="text-gray o-70">23.73%</span></p>
               </div>
               <div data-aos="fade-up">
-                <h4 class="h5 text-kraft mb-0">Human Resources Cost</h4>
-                <p class="h5 tracking-tighter mb-5">$19.35m <span class="text-gray o-70">46%</span></p>
+                <h4 class="h5 text-kraft mb-0">Gatherings, Events, &amp; Facilities</h4>
+                <p class="h5 tracking-tighter mb-5">$18.54m <span class="text-gray o-70">41.81%</span></p>
               </div>
               <div data-aos="fade-up">
                 <h4 class="h5 text-kraft mb-0">Discipleship, Outreach, &amp; Missions</h4>
                 <p class="mb-2 italic">Of this, over $4.48m was given to local and global mission partners!</p>
-                <p class="h5 tracking-tighter">$7.52m <span class="text-gray o-70">18%</span></p>
+                <p class="h5 tracking-tighter">$7.52m <span class="text-gray o-70">16.96%</span></p>
+              </div>
+              <div data-aos="fade-up">
+                <h4 class="h5 text-kraft mb-0">Support Operational Expenses</h4>
+                <p class="h5 tracking-tighter mb-5">$7.76m <span class="text-gray o-70">17.5%</span></p>
               </div>
             </div>
           </div>
 
           <div class="text-center">
-            <p>For further questions, please email us at <a href="#">finance@newspring.cc</a> &mdash; we'd love to help!</p>
+            <p>
+              For further questions, please contact us at
+              <a href="/workflows/800?Recipient=finance%40newspring.cc&ReturnUrl=https%3A%2F%2Fnewspring.cc%2Fpage%2F14127">finance@newspring.cc</a> &mdash;
+              we'd love to help!
+            </p>
             <p>
               <a href="#give" class="btn btn-primary bg-blue mb-2 mb-sm-0" data-scroll>Give Now</a>
             </p>
